traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Erreur de compilation :
TraversalDiagonal:2: error: Missing closing brace `}' assumed here
override def run() {
^TraversalDiagonal:2: error: expected start of definition
override def run() {
         ^TraversalDiagonal:16: error: expected class or object definition
def posFinale() : Boolean = {
^TraversalDiagonal:22: error: expected class or object definition
def posSuivante(d) : Int = {
^